reduced the padding top on the destinations container to 8rem from 12 rem to fix the overflow it was causing. Also reduced the font size of the planet-stats p elements on tablet screens to 1.5rem from 2rem.

--- a/src/pages/destination/destination.css
+++ b/src/pages/destination/destination.css
@@ -146,7 +146,7 @@
 @media (min-width: 991.98px) {
   .destination-container {
     background-image: url(../../assets/destination/background-destination-desktop.jpg);
-    padding-top: 12rem;
+    padding-top: 8rem;
   }
 
   .destination-content-container {
@@ -213,6 +213,9 @@
 }
 
 @media (min-width: 1199.98px) {
+  .destination-container {
+    padding-top: 12rem;
+  }
   .destination-info {
     padding-top: 4rem;
   }
